[288](https://github.com/avbravo/jettraDB/issues/288)
[290](https://github.com/avbravo/jettraDB/issues/290)
[291](https://github.com/avbravo/jettraDB/issues/291)